--- a/package/contents/ui/config.ui
+++ b/package/contents/ui/config.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>516</width>
-    <height>405</height>
+    <height>437</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -392,6 +392,12 @@
              <layout class="QFormLayout" name="formLayout">
               <item row="0" column="0">
                <widget class="QSpinBox" name="kcfg_FollowOffsetX">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
                 <property name="cursor">
                  <cursorShape>SizeVerCursor</cursorShape>
                 </property>
@@ -411,6 +417,12 @@
               </item>
               <item row="0" column="1">
                <widget class="QSpinBox" name="kcfg_FollowOffsetY">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
                 <property name="cursor">
                  <cursorShape>SizeVerCursor</cursorShape>
                 </property>
@@ -441,12 +453,15 @@
              <widget class="QSpinBox" name="kcfg_AnimationInterval">
               <property name="maximumSize">
                <size>
-                <width>154</width>
+                <width>11239123</width>
                 <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
                <cursorShape>SizeVerCursor</cursorShape>
+              </property>
+              <property name="toolTip">
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;How often the cat moves - I don't recommend modifying this setting too far from the default as low intervals cause issues with frame rendering&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
               <property name="minimum">
                <number>50</number>
@@ -494,14 +509,14 @@
             <property name="fieldGrowthPolicy">
              <enum>QFormLayout::FieldGrowthPolicy::AllNonFixedFieldsGrow</enum>
             </property>
-            <item row="0" column="0">
+            <item row="1" column="0">
              <widget class="QLabel" name="labelAppearance">
               <property name="text">
-               <string>Sprite set</string>
+               <string>Spriteset</string>
               </property>
              </widget>
             </item>
-            <item row="0" column="1">
+            <item row="1" column="1">
              <widget class="QComboBox" name="kcfg_Appearance">
               <item>
                <property name="text">
@@ -545,37 +560,116 @@
               </item>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="3" column="0">
              <widget class="QLabel" name="labelUserSprite">
               <property name="text">
                <string>User sprite</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
-             <widget class="QLineEdit" name="kcfg_UserSprite">
+            <item row="3" column="1">
+             <widget class="KUrlRequester" name="kcfg_UserSprite">
               <property name="enabled">
                <bool>false</bool>
               </property>
-              <property name="toolTip">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Absoulte path to the spritemap image&lt;/p&gt;&lt;p&gt;If on reload, there is no image, check the validity of the path&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
               </property>
-              <property name="cursorPosition">
-               <number>0</number>
+              <property name="toolTip">
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Absoulte path to the spritemap image&lt;/p&gt;&lt;p&gt;A file preview of the image should be seen below - if none are shown, check the validity of the path&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
               <property name="placeholderText">
                <string>/home/rileyaft/Pictures/neko.png</string>
               </property>
              </widget>
             </item>
-            <item row="2" column="1">
+            <item row="5" column="1">
              <widget class="QCheckBox" name="kcfg_UseUserSprite">
               <property name="text">
                <string>Use user sprite?</string>
               </property>
              </widget>
             </item>
+            <item row="0" column="0">
+             <widget class="QLabel" name="labelCatScale">
+              <property name="text">
+               <string>Cat scale</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QComboBox" name="kcfg_CatScale">
+              <property name="currentIndex">
+               <number>3</number>
+              </property>
+              <item>
+               <property name="text">
+                <string>0.25x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>0.5x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>0.75x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>1x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>1.25x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>1.5x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>1.75x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>2x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>2.5x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>3x</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>4x</string>
+               </property>
+              </item>
+             </widget>
+            </item>
            </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="KImageFilePreview" name="spritePreview">
+           <property name="minimumSize">
+            <size>
+             <width>50</width>
+             <height>50</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
@@ -623,40 +717,6 @@
             <property name="fieldGrowthPolicy">
              <enum>QFormLayout::FieldGrowthPolicy::AllNonFixedFieldsGrow</enum>
             </property>
-            <item row="0" column="0">
-             <widget class="QPushButton" name="kcfg_EasterEgg">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
-              <property name="focusPolicy">
-               <enum>Qt::FocusPolicy::NoFocus</enum>
-              </property>
-              <property name="text">
-               <string/>
-              </property>
-              <property name="icon">
-               <iconset theme="emote-love"/>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>48</width>
-                <height>48</height>
-               </size>
-              </property>
-              <property name="checkable">
-               <bool>false</bool>
-              </property>
-              <property name="checked">
-               <bool>false</bool>
-              </property>
-              <property name="default">
-               <bool>false</bool>
-              </property>
-              <property name="flat">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="1">
              <layout class="QVBoxLayout" name="verticalLayoutAbout">
               <item>
@@ -740,6 +800,40 @@
               </property>
              </widget>
             </item>
+            <item row="0" column="0">
+             <widget class="QPushButton" name="iconEasterEgg">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="focusPolicy">
+               <enum>Qt::FocusPolicy::NoFocus</enum>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="icon">
+               <iconset theme="emote-love"/>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>48</width>
+                <height>48</height>
+               </size>
+              </property>
+              <property name="checkable">
+               <bool>false</bool>
+              </property>
+              <property name="checked">
+               <bool>false</bool>
+              </property>
+              <property name="default">
+               <bool>false</bool>
+              </property>
+              <property name="flat">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
@@ -764,24 +858,20 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>KImageFilePreview</class>
+   <extends>QWidget</extends>
+   <header>kimagefilepreview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KUrlRequester</class>
+   <extends>QWidget</extends>
+   <header>kurlrequester.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
-  <connection>
-   <sender>kcfg_UseUserSprite</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>kcfg_UserSprite</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>373</x>
-     <y>147</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>373</x>
-     <y>111</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>categoryList</sender>
    <signal>currentRowChanged(int)</signal>
@@ -795,6 +885,54 @@
     <hint type="destinationlabel">
      <x>335</x>
      <y>202</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>kcfg_UseUserSprite</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>kcfg_UserSprite</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>373</x>
+     <y>148</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>373</x>
+     <y>112</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>kcfg_UserSprite</sender>
+   <signal>urlSelected(QUrl)</signal>
+   <receiver>spritePreview</receiver>
+   <slot>showPreview(QUrl)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>373</x>
+     <y>112</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>335</x>
+     <y>211</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>kcfg_UseUserSprite</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spritePreview</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>373</x>
+     <y>148</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>335</x>
+     <y>211</y>
     </hint>
    </hints>
   </connection>
